--- a/online.html
+++ b/online.html
@@ -18,7 +18,9 @@
                 <p>前端工程师</p>
                 <p>Email:sunnychucai@qq.com</p>
                 <p>Tel:18271947865</p>
-                <p>微信:hcchtc</p>
+                <p class="last">微信:hcchtc</p>
+                <a  href="http://www.jianshu.com/u/18d733dd8c26">更多了解查看<strong>blog</strong></a>
+                <a  href="https://github.com/huangchucai">代码了解<strong>github</strong></a>
             </div>
         </li>
         <li class="two view">
