--- a/online.html
+++ b/online.html
@@ -115,7 +115,7 @@
         </li>
         <li class='six view'>
             <h2 class='center'>感谢您花时间看完我的简历,希望有机会能与您共事!</h2>
-            <a href="https://raszxcv.github.io/MyResumeOnLine/resume.pdf">这里是PDF版</a>
+            <a href="https://github.com/huangchucai/Resume/blob/master/resume.pdf">这里是PDF版</a>
         </li>
     </ul>
 </div>
